--- a/app/assets/stylesheets/mypage/index.scss
+++ b/app/assets/stylesheets/mypage/index.scss
@@ -201,6 +201,11 @@
     font-size: 14px;
     color: #333;
   }
+  .fas.fa-chevron-right{
+    float: right;
+    color: #ccc;
+  
+  }
 
   &__list-name2{
     display: block;
