--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,6 +5,7 @@
 @import "posts/index";
 @import "posts/user";
 @import "posts/new";
+@import "posts/search";
 
 @import "mypage/index";
 @import "mypage/show";
@@ -17,6 +18,7 @@
 @import "mypage/address";
 @import "mypage/password";
 @import "mypage/identification";
+
 
 
 /*
