--- a/app/views/signups/new.html.haml
+++ b/app/views/signups/new.html.haml
@@ -68,14 +68,14 @@
       %span.required 必須
       %br/
 
-      = f.text_field :birthday, autofocus: true, class: "field-input-time", placeholder: "--",autocomplete: "birthday"
-      %span 年
+      = f.date_select :birthday, use_month_numbers: true , start_year: 100.years.ago(Date.today).year, default: @the_date,autofocus: true, class: "field-input-time", placeholder: "--",autocomplete: "birthday"
+      -# %span 年
 
-      = f.text_field :birthday, autofocus: true, class: "field-input-time", placeholder: "--",autocomplete: "birthday"
-      %span 月
+      -# = f.text_field :birthday, autofocus: true, class: "field-input-time", placeholder: "--",autocomplete: "birthday"
+      -# %span 月
 
-      = f.text_field :birthday, autofocus: true, class: "field-input-time", placeholder: "--",autocomplete: "birthday"
-      %span 日
+      -# = f.text_field :birthday, autofocus: true, class: "field-input-time", placeholder: "--",autocomplete: "birthday"
+      -# %span 日
 
       .member-person-wrap-suer-text
         %p ※本人情報は正しく入力してください。会員登録後、修正するにはお時間を頂く場合があります。
