--- a/app/assets/stylesheets/posts/user.scss
+++ b/app/assets/stylesheets/posts/user.scss
@@ -35,7 +35,8 @@ body {
 }
 .progress-wrap {
   width: 700px;
-  margin: 20px auto;
+  margin: auto;
+  padding-top: 20px;
 }
 .progress-bar {
   text-align: right;
