--- a/app/assets/stylesheets/posts/new.scss
+++ b/app/assets/stylesheets/posts/new.scss
@@ -57,6 +57,7 @@
                             display: flex;
                             .preview {
                                 margin: 10px;
+                                display: flex;
                             }
                             .image_box {
                                 width: 620px;
